--- a/Cultural Hub/WebApp/Views/Shared/_Layout.cshtml
+++ b/Cultural Hub/WebApp/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Labs">Labs</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Time" asp-action="Index">Time</a>
+                        </li>
                     </ul>
                 </div>
             </div>
