--- a/Cultural Hub/WebApp/Views/Shared/_Layout.cshtml
+++ b/Cultural Hub/WebApp/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Time" asp-action="Index">Time</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="List" asp-action="Items">List of Items</a>
+                        </li>
                     </ul>
                 </div>
             </div>
