--- a/Cultural Hub/WebApp/Views/Events/Details.cshtml
+++ b/Cultural Hub/WebApp/Views/Events/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApp.Models.EventViewModel
+﻿@model WebApp.Models.EventDetailsViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>EventViewModel</h4>
+    <h4>EventDetailsViewModel</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -56,5 +56,7 @@
 </div>
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <a asp-area="" asp-controller="Home" asp-action="Index">Back to List</a>
 </div>
+
+
