--- a/Cultural Hub/WebApp/Views/Home/Index.cshtml
+++ b/Cultural Hub/WebApp/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<EventViewModel>
+﻿@model List<EventListViewModel>
 
 @{
     ViewData["Title"] = "Home Page";
@@ -6,59 +6,51 @@
 
 <div>
     <h1 class="display-4">Welcome</h1>
-    <table class="table table-borderless table-striped">
-        <thead>
-            <tr>
-                <th>
-                    Titlu
-                </th>
-                <th>
-                    Locatie
-                </th>
-                <th>
-                    Tip Locatie
-                </th>
-                <th>
-                    Incepe la
-                </th>
-                <th>
-                    Tipul evenimentului
-                </th>
-                <th>
-                    Audienta
-                </th>
-                <th>
-                    Durata
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-            <tr>
-                <td>
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Details" asp-route-id="@item.Id">@item.Title</a>
-                </td>
-                <td>
-                    @item.LocationAddress
-                </td>
-                <td>
-                    @item.LocationType
-                </td>
-                <td>
-                    @item.StartsAt.ToString("dddd, d MMMM yyyy hh:mm")
-                </td>
-                <td>
-                    @item.Type
-                </td>
-                <td>
-                    @item.Audience
-                </td>
-                <td>
-                    @item.Duration.ToString(@"hh\:mm\:ss")
-                </td>
-            </tr>
-            }
-        </tbody>   
-    </table>
+
+    <div class="row row-cols-1 row-cols-md-2">
+        @foreach (var item in Model)
+        {
+            <div class="col mb-4">
+                <div class="card">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="@item.Pictures[0]" class="slide-image" width="500" height="400" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="@item.Pictures[1]" class="slide-image" width="500" height="400" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="@item.Pictures[2]" class="slide-image" width="500" height="400" alt="...">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title"><a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Details" asp-route-id="@item.Id">@item.Title</a></h5>
+                        <p class="card-text">
+                            <ul>
+                                <li>@item.StartsAt.ToString("dddd, d MMMM yyyy hh:mm")</li>
+                                <li>@item.LocationAddress</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
 </div>
+
+
