--- a/Cultural Hub/WebApp/Views/Home/Index.cshtml
+++ b/Cultural Hub/WebApp/Views/Home/Index.cshtml
@@ -10,8 +10,8 @@
     <div class="row row-cols-1 row-cols-md-2">
         @foreach (var item in Model)
         {
-            <div class="col mb-4">
-                <div class="card">
+            <div>
+                <div class="card event-card">
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -20,13 +20,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="@item.Pictures[0]" class="slide-image" width="500" height="400" alt="...">
+                                <img src="https://agrobiznes.md/wp-content/uploads/2013/02/capre.jpg" class="slide-image" width="500" height="400" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="@item.Pictures[1]" class="slide-image" width="500" height="400" alt="...">
+                                <img src="https://i.ytimg.com/vi/Wz01h5lRFHM/maxresdefault.jpg" class="slide-image" width="500" height="400" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="@item.Pictures[2]" class="slide-image" width="500" height="400" alt="...">
+                                <img src="http://www.zooland.ro//data/articles/40/1407/Clipboard011-0n.jpg" class="slide-image" width="500" height="400" alt="...">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
