--- a/Cultural Hub/WebApp/Views/Home/Index.cshtml
+++ b/Cultural Hub/WebApp/Views/Home/Index.cshtml
@@ -12,13 +12,23 @@
         {
             <div>
                 <div class="card event-card">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <div id="@Guid.NewGuid()" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                         </ol>
                         <div class="carousel-inner">
+
+                            @foreach (var pic in item.Pictures)
+                            {
+                                <div class="carousel-item active">
+                                    <img src="@pic.ToString()" class="slide-image" width="500" height="400" alt="...">
+                                </div>
+                            }
+
+
+
                             <div class="carousel-item active">
                                 <img src="https://agrobiznes.md/wp-content/uploads/2013/02/capre.jpg" class="slide-image" width="500" height="400" alt="...">
                             </div>
