--- a/Cultural Hub/WebApp/Views/Events/Details.cshtml
+++ b/Cultural Hub/WebApp/Views/Events/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalii</h1>
 
 <div>
-    <h4>EventDetailsViewModel</h4>
+    <h4>@Html.DisplayFor(model => model.Title)</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -55,8 +55,11 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-area="" asp-controller="Home" asp-action="Index">Back to List</a>
+    @*@Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |*@
+
+    <a asp-area="" asp-controller="Events" asp-action="EditEvent">Edit |</a>
+    <a asp-area="" asp-controller="Events" asp-action="DeleteEvent"> Delete |</a>
+    <a asp-area="" asp-controller="Home" asp-action="Index"> Back to List</a>
 </div>
 
 
