--- a/Cultural Hub/WebApp/Views/Events/EditEvent.cshtml
+++ b/Cultural Hub/WebApp/Views/Events/EditEvent.cshtml
@@ -1,16 +1,16 @@
 ﻿@model WebApp.Models.EventViewModel
 
 @{
-    ViewData["Title"] = "AddEvent";
+    ViewData["Title"] = "EditEvent";
 }
 
-<h1>Eveniment Nou</h1>
+<h1>Editare eveniment</h1>
 
 <h4>Detalii Eveniment</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddEvent" method="post" id="add_form">
+        <form asp-action="EditEvent" method="post" id="add_form">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
