--- a/Cultural Hub/WebApp/Views/Events/DeleteEvent.cshtml
+++ b/Cultural Hub/WebApp/Views/Events/DeleteEvent.cshtml
@@ -1,4 +1,4 @@
-﻿@model Domain.Event
+﻿@model EventDetailsViewModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -6,16 +6,10 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this reservation?</h3>
+<h3>Are you sure you want to delete this event?</h3>
 <br />
 <div>
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
@@ -32,10 +26,9 @@
 
     </dl>
 
-    <form asp-action="Delete">
-        <input type="submit" value="Delete" class="btn btn-danger" />
-
-        @Html.ActionLink("Back to list", "Index", "Home")
-
-    </form>
+    <a class="btn btn-danger"
+       asp-controller="Events"
+       asp-action="Delete"
+       asp-route-eventId="@Model.Id">Delete</a>
+    @Html.ActionLink("Back to list", "Index", "Home")
 </div>
