--- a/Cultural Hub/WebApp/Views/Home/Index.cshtml
+++ b/Cultural Hub/WebApp/Views/Home/Index.cshtml
@@ -31,9 +31,18 @@
                                 </div>
                             }
 
-                        </div>
 
-                        <a class="carousel-control-prev" href="#carousel-@item.Id.ToString()" role="button" data-slide="prev">
+                            @*<div class="carousel-item active">
+            <img src="https://agrobiznes.md/wp-content/uploads/2013/02/capre.jpg" class="slide-image" width="500" height="400" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="https://i.ytimg.com/vi/Wz01h5lRFHM/maxresdefault.jpg" class="slide-image" width="500" height="400" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="http://www.zooland.ro//data/articles/40/1407/Clipboard011-0n.jpg" class="slide-image" width="500" height="400" alt="...">
+        </div>*@
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
                         </a>
@@ -50,8 +59,6 @@
                                 <li>@item.LocationAddress</li>
                             </ul>
                         </p>
-                        <button type="button" class="btn btn-light">@Html.ActionLink("Delete", "DeleteEvent", "Events", new { eventId = @item.Id.ToString() })</button>
-
                     </div>
                 </div>
             </div>
