--- a/Cultural Hub/WebApp/Views/Events/AddEvent.cshtml
+++ b/Cultural Hub/WebApp/Views/Events/AddEvent.cshtml
@@ -68,6 +68,12 @@
                 <input asp-for="Pictures" class="form-control" />
                 <input asp-for="Pictures" class="form-control" />
                 <input asp-for="Pictures" class="form-control" />
+                <input asp-for="Pictures" class="form-control" />
+                <input asp-for="Pictures" class="form-control" />
+                <input asp-for="Pictures" class="form-control" />
+                <input asp-for="Pictures" class="form-control" />
+                <input asp-for="Pictures" class="form-control" />
+                <input asp-for="Pictures" class="form-control" />
                 <span asp-validation-for="Pictures" class="text-danger"></span>
             </div>
             <div class="form-group">
