--- a/Cultural Hub/WebApp/Views/Events/EditEvent.cshtml
+++ b/Cultural Hub/WebApp/Views/Events/EditEvent.cshtml
@@ -1,20 +1,21 @@
 ﻿@model WebApp.Models.CrudEventViewModel
 
 @{
-    ViewData["Title"] = "EditEvent";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Editare eveniment</h1>
+<h1>Edit</h1>
 
-<h4>Detalii Eveniment</h4>
+<h4>EventEditModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="EditEvent" method="post" id="add_form">
+        <form asp-action="EditEvent">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @Html.HiddenFor(x => x.Id)
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" required />
+                <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -24,61 +25,67 @@
             </div>
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" required />
+                <input asp-for="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LocationType" class="control-label"></label>
-                @*@Html.DropDownList("Tip Locatie", , new {@class = "form-control" })*@
-                <select asp-for="LocationType" class="form-control" required>
-                    <option selected disabled value="">...</option>
-                    <option>Interior</option>
-                    <option>Exterior</option>
-                </select>
+                @Html.DropDownList("LocationType", (SelectList)ViewBag.RequiredLocationType, new { @class = "form-control" })
                 <span asp-validation-for="LocationType" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="StartsAt" class="control-label"></label>
-                <input asp-for="StartsAt" class="form-control" required />
+                <input asp-for="StartsAt" class="form-control" />
                 <span asp-validation-for="StartsAt" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Duration" class="control-label"></label>
-                <input asp-for="Duration" class="form-control" required />
+                <input asp-for="Duration" class="form-control" />
                 <span asp-validation-for="Duration" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <input asp-for="Type" class="form-control" required />
+                @Html.DropDownList("Type", (SelectList)ViewBag.RequiredEventType, new { @class = "form-control" })
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Audience" class="control-label"></label>
-                <select asp-for="Audience" class="form-control">
-                    <option selected disabled value="">...</option>
-                    <option>Copii</option>
-                    <option>Audienta Generala</option>
-                </select>
+                @Html.DropDownList("Audience", (SelectList)ViewBag.RequiredAudience, new { @class = "form-control" })
                 <span asp-validation-for="Audience" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="PublishDate" class="control-label"></label>
+                <input asp-for="PublishDate" class="form-control" />
+                <span asp-validation-for="PublishDate" class="text-danger"></span>
+            </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
+                </label>
+            </div>
+            <div class="form-group">
                 <label asp-for="Pictures" class="control-label"></label>
-                <input asp-for="Pictures" class="form-control" placeholder="Introduceti link-ul catre imagine" />
 
+                @foreach (var item in Model.Pictures)
+                {
+                    int i = 0;
+                    <input asp-for="Pictures[i]" class="form-control" />
+                    i++;
+                }
                 <span asp-validation-for="Pictures" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Creare Eveniment" class="btn btn-primary" />
+                <input type="submit" value="Edit" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-controller="Home" asp-action="Index">Back to List</a>
+    @Html.ActionLink("Back to list", "Index", "Home")
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-   
 }
