--- a/Cultural Hub/WebApp/Views/Home/Index.cshtml
+++ b/Cultural Hub/WebApp/Views/Home/Index.cshtml
@@ -12,41 +12,37 @@
         {
             <div>
                 <div class="card event-card">
-                    <div id="@Guid.NewGuid()" class="carousel slide" data-ride="carousel">
+                    <div id="carousel-@item.Id.ToString()" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            <li data-target="#carousel-@item.Id.ToString()" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-@item.Id.ToString()" data-slide-to="1"></li>
+                            <li data-target="#carousel-@item.Id.ToString()" data-slide-to="2"></li>
                         </ol>
                         <div class="carousel-inner">
 
-                            @foreach (var pic in item.Pictures)
+                            <div class="carousel-item active">
+                                <img src="@item.Pictures[0].ToString()" class="slide-image" width="500" height="400" alt="...">
+                            </div>
+
+                            @foreach (var pic in item.Pictures.Skip(1))
                             {
-                                <div class="carousel-item active">
+                                <div class="carousel-item">
                                     <img src="@pic.ToString()" class="slide-image" width="500" height="400" alt="...">
                                 </div>
                             }
 
-
-                            @*<div class="carousel-item active">
-            <img src="https://agrobiznes.md/wp-content/uploads/2013/02/capre.jpg" class="slide-image" width="500" height="400" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="https://i.ytimg.com/vi/Wz01h5lRFHM/maxresdefault.jpg" class="slide-image" width="500" height="400" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="http://www.zooland.ro//data/articles/40/1407/Clipboard011-0n.jpg" class="slide-image" width="500" height="400" alt="...">
-        </div>*@
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </div>
+
+
+                            <a class="carousel-control-prev" href="#carousel-@item.Id.ToString()" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carousel-@item.Id.ToString()" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
                     <div class="card-body">
                         <h5 class="card-title"><a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Details" asp-route-id="@item.Id">@item.Title</a></h5>
                         <p class="card-text">
@@ -55,6 +51,16 @@
                                 <li>@item.LocationAddress</li>
                             </ul>
                         </p>
+                        <table>
+                            <tr>
+                                <td>
+                                    <button type="button" class="btn btn-light">@Html.ActionLink("Delete", "Delete", "Events", new { id = @item.Id.ToString() })</button>
+                                </td>
+                                <td>
+                                    <button type="button" class="btn btn-warning">@Html.ActionLink("Edit", "Edit", "Events", new { id = @item.Id.ToString() })</button>
+                                </td>
+                            </tr>
+                        </table>
                     </div>
                 </div>
             </div>
