--- a/Cultural Hub/WebApp/Views/Events/Create.cshtml
+++ b/Cultural Hub/WebApp/Views/Events/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApp.Models.CrudEventViewModel
+﻿@model WebApp.Models.EventCreateModel
 
 @{
     ViewData["Title"] = "Create";
@@ -10,8 +10,13 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddEvent">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" />
+                <span asp-validation-for="Id" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
@@ -65,12 +70,6 @@
             </div>
             <div class="form-group">
                 <label asp-for="Pictures" class="control-label"></label>
-                <input asp-for="Pictures" class="form-control" />
-                <input asp-for="Pictures" class="form-control" />
-                <input asp-for="Pictures" class="form-control" />
-                <input asp-for="Pictures" class="form-control" />
-                <input asp-for="Pictures" class="form-control" />
-                <input asp-for="Pictures" class="form-control" />
                 <input asp-for="Pictures" class="form-control" />
                 <input asp-for="Pictures" class="form-control" />
                 <input asp-for="Pictures" class="form-control" />
