--- a/Cultural Hub/WebApp/Views/Shared/_Layout.cshtml
+++ b/Cultural Hub/WebApp/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Create">Add Event</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="AddEvent">Adaugare Eveniment</a>
                         </li>
                     </ul>
                 </div>
