--- a/Cultural Hub/WebApp/Views/Events/AddEvent.cshtml
+++ b/Cultural Hub/WebApp/Views/Events/AddEvent.cshtml
@@ -63,19 +63,28 @@
                     <input class="form-check-input" asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
                 </label>
             </div>
-            <div class="form-group">
-                <label asp-for="Pictures" class="control-label"></label>
-                <input asp-for="Pictures" class="form-control" />
-                <input asp-for="Pictures" class="form-control" />
-                <input asp-for="Pictures" class="form-control" />
-                <input asp-for="Pictures" class="form-control" />
-                <input asp-for="Pictures" class="form-control" />
-                <input asp-for="Pictures" class="form-control" />
-                <input asp-for="Pictures" class="form-control" />
-                <input asp-for="Pictures" class="form-control" />
-                <input asp-for="Pictures" class="form-control" />
-                <span asp-validation-for="Pictures" class="text-danger"></span>
+            <div class="container" style="display: flex; justify-content: center">
+                <div class="row bg-primary text-white" style="border: 1px solid black;">
+                    <form method="post" enctype="multipart/form-data">
+                        <div id="fileBasket">
+                            Drag-n-Drop files here!
+                        </div>
+                    </form>
+                </div>
             </div>
+            @*<div class="form-group">
+            <label asp-for="Pictures" class="control-label"></label>
+            <input asp-for="Pictures" class="form-control" />
+            <input asp-for="Pictures" class="form-control" />
+            <input asp-for="Pictures" class="form-control" />
+            <input asp-for="Pictures" class="form-control" />
+            <input asp-for="Pictures" class="form-control" />
+            <input asp-for="Pictures" class="form-control" />
+            <input asp-for="Pictures" class="form-control" />
+            <input asp-for="Pictures" class="form-control" />
+            <input asp-for="Pictures" class="form-control" />
+            <span asp-validation-for="Pictures" class="text-danger"></span>
+        </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -89,4 +98,52 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            $("#fileBasket").on("dragenter", function (evt) {
+                evt.preventDefault();
+                evt.stopPropagation();
+            });
+
+            $("#fileBasket").on("dragover", function (evt) {
+                evt.preventDefault();
+                evt.stopPropagation();
+            });
+
+            $("#fileBasket").on("drop", function (evt) {
+                evt.preventDefault();
+                evt.stopPropagation();
+
+                var files = evt.originalEvent.dataTransfer.files;
+                var fileNames = "";
+                if (files.length > 0) {
+                    fileNames += "Uploading <br/>"
+                    for (var i = 0; i < files.length; i++) {
+                        fileNames += files[i].name + "<br/>";
+                    }
+                }
+                $("#fileBasket").html(fileNames)
+
+                var data = new FormData();
+                for (var i = 0; i < files.length; i++) {
+                    data.append(files[i].name, files[i]);
+                }
+
+                $.ajax({
+                    type: "POST",
+                    url: "/Home/UploadFiles", // url: "/NumeController/NumeActiune"
+                    contentType: false,
+                    processData: false,
+                    data: data,
+                    success: function (message) {
+                        $("#fileBasket").html(message);
+                    },
+                    error: function () {
+                        $("#fileBasket").html("The files couldn't be uploaded!");
+                    },
+                });
+            });
+        });
+    </script>
 }
