--- a/Cultural Hub/WebApp/Views/Events/EditEvent.cshtml
+++ b/Cultural Hub/WebApp/Views/Events/EditEvent.cshtml
@@ -73,6 +73,7 @@
                     <input asp-for="Pictures[i]" class="form-control" />
                     i++;
                 }
+                <input asp-for="Pictures" class="form-control" />
                 <span asp-validation-for="Pictures" class="text-danger"></span>
             </div>
             <div class="form-group">
