--- a/Cultural Hub/WebApp/Views/Events/AddEvent.cshtml
+++ b/Cultural Hub/WebApp/Views/Events/AddEvent.cshtml
@@ -64,27 +64,23 @@
                 </label>
             </div>
             <div class="container" style="display: flex; justify-content: center">
-                <div class="row bg-primary text-white" style="border: 1px solid black;">
-                    <form method="post" enctype="multipart/form-data">
-                        <div id="fileBasket">
-                            Drag-n-Drop files here!
-                        </div>
-                    </form>
+                <div asp-for="Pictures" class="form-control" id="fileBasket">
+                    Drag-n-Drop files here!
                 </div>
             </div>
-            @*<div class="form-group">
-            <label asp-for="Pictures" class="control-label"></label>
-            <input asp-for="Pictures" class="form-control" />
-            <input asp-for="Pictures" class="form-control" />
-            <input asp-for="Pictures" class="form-control" />
-            <input asp-for="Pictures" class="form-control" />
-            <input asp-for="Pictures" class="form-control" />
-            <input asp-for="Pictures" class="form-control" />
-            <input asp-for="Pictures" class="form-control" />
-            <input asp-for="Pictures" class="form-control" />
-            <input asp-for="Pictures" class="form-control" />
-            <span asp-validation-for="Pictures" class="text-danger"></span>
-        </div>*@
+            <div class="form-group">
+                <label asp-for="Pictures" class="control-label"></label>
+                <input asp-for="Pictures" class="form-control" />
+                <input asp-for="Pictures" class="form-control" />
+                <input asp-for="Pictures" class="form-control" />
+                <input asp-for="Pictures" class="form-control" />
+                <input asp-for="Pictures" class="form-control" />
+                <input asp-for="Pictures" class="form-control" />
+                <input asp-for="Pictures" class="form-control" />
+                <input asp-for="Pictures" class="form-control" />
+                <input asp-for="Pictures" class="form-control" />
+                <span asp-validation-for="Pictures" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -132,7 +128,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "/Home/UploadFiles", // url: "/NumeController/NumeActiune"
+                    url: "/Events/UploadFiles", // url: "/NumeController/NumeActiune"
                     contentType: false,
                     processData: false,
                     data: data,
