Added PictureManagement (still not working)

--- a/Cultural Hub/WebApp/Views/Events/Details.cshtml
+++ b/Cultural Hub/WebApp/Views/Events/Details.cshtml
@@ -61,8 +61,8 @@
     </dl>
 </div>
 <div>
-    <a asp-area="" asp-controller="Events" asp-action="EditEvent" asp-route-eventId="@Model.Id">Edit |</a>
-    <a asp-area="" asp-controller="Events" asp-action="DeleteEvent" asp-route-eventId="@Model.Id"> Delete |</a>
+    <a asp-area="" asp-controller="Events" asp-action="EditEvent" asp-route-id="@Model.Id">Edit |</a>
+    <a asp-area="" asp-controller="Events" asp-action="DeleteEvent" asp-route-id="@Model.Id"> Delete |</a>
     <a asp-area="" asp-controller="Home" asp-action="Index"> Back to List</a>
 </div>
 
