--- a/Cultural Hub/WebAppClient/Views/Home/Index.cshtml
+++ b/Cultural Hub/WebAppClient/Views/Home/Index.cshtml
@@ -1,8 +1,69 @@
-﻿@{
+﻿@model List<EventShortInfoViewModel>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<div>
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <div class="row row-cols-1 row-cols-md-2">
+        @foreach (var item in Model)
+        {
+            <div>
+                <div class="card event-card">
+                    <div id="carousel-@item.Id.ToString()" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-@item.Id.ToString()" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-@item.Id.ToString()" data-slide-to="1"></li>
+                            <li data-target="#carousel-@item.Id.ToString()" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+
+                            <div class="carousel-item active">
+                                <img src="@item.Pictures[0].ToString()" class="slide-image" width="500" height="400" alt="...">
+                            </div>
+
+                            @foreach (var pic in item.Pictures.Skip(1))
+                            {
+                                <div class="carousel-item">
+                                    <img src="@pic.ToString()" class="slide-image" width="500" height="400" alt="...">
+                                </div>
+                            }
+
+
+                            @*<div class="carousel-item active">
+            <img src="https://agrobiznes.md/wp-content/uploads/2013/02/capre.jpg" class="slide-image" width="500" height="400" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="https://i.ytimg.com/vi/Wz01h5lRFHM/maxresdefault.jpg" class="slide-image" width="500" height="400" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="http://www.zooland.ro//data/articles/40/1407/Clipboard011-0n.jpg" class="slide-image" width="500" height="400" alt="...">
+        </div>*@
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carousel-@item.Id.ToString()" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title"><a class="nav-link text-dark" asp-area="" asp-controller="Events" asp-action="Details" asp-route-id="@item.Id">@item.Title</a></h5>
+                        <p class="card-text">
+                            <ul>
+                                <li>@item.StartsAt.ToString("dddd, d MMMM yyyy hh:mm")</li>
+                                <li>@item.LocationAddress</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
 </div>
+
+
